# vector

./: .gitignore  Cargo.toml  Dockerfile  bench.sh
src/: console.rs  lib.rs  log.rs  main.rs  splunk.rs  transport.rs
src/sources/: console.rs  mod.rs
src/transport/: mod.rs
src/transport/file/: consumer.rs  coordinator.rs  log.rs
