[package]
name = "myvector"
version = "0.1.0"
authors = ["supermark"]
#edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = "0.5.6"
log = "0.4.5"
byteorder = "1.2.6"
tempdir= "0.3.7"
uuid = { version = "0.7.1", features = ["serde", "v4"] }
memchr = "2.1.0"
chrono = "0.4.6"
rand = "0.5.5"
regex = "1.0.5"
duct = "0.11.1"
os_pipe = "0.8.0"
bytes = "0.4.10"